# linear_algebra

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  gtest_report_matrix_vector.txt  runTests  run_test.sh  valgrind_report_main.txt  valgrind_report_unittest.txt
include/: avector.h  matrix.h  noncompatible_dimension_exception.h
src/: avector.cpp  matrix.cpp
test/: avector_test.cpp  matrix_test.cpp
